[gd_scene load_steps=2 format=3 uid="uid://c8m4x0q0x8q0z"]

[ext_resource type="Script" path="res://scenes/ui/screens/career_hub_screen.gd" id="1_ghi56"]

[node name="CareerHubScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ghi56")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1.0)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Career Hub"
horizontal_alignment = 1

[node name="CareerInfoLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = 200.0
grow_horizontal = 0
text = "Career Info"

[node name="LeftPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_vertical = 2
theme_override_constants/separation = 20

[node name="NextMissionButton" type="Button" parent="LeftPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Next Mission"

[node name="MissionsButton" type="Button" parent="LeftPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Missions"

[node name="BotManagementButton" type="Button" parent="LeftPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Bot Management"

[node name="BackButton" type="Button" parent="LeftPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[node name="SettingsButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
text = "Settings"

[node name="ExitButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 70.0
offset_right = -20.0
offset_bottom = 110.0
grow_horizontal = 0
text = "Exit"
